--- a/pages/index.html
+++ b/pages/index.html
@@ -19,38 +19,33 @@
 
     <body>
         <!-- navbar starts here -->
-        <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-info py-3 px-2 sticky-top" aria-label="navbar">
-                <div class="container-fluid">
-                    <img src="../assets/logo.png" style="width: 50px; margin-right:10px;">
-                    <a class="navbar-brand fs-3" href="#">Ottawa Dental Clinic</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
-                        aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar">
-                        <ul class="navbar-nav ms-auto py-0 pe-4">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about-us">About us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#services">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#team">Our Team</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#reviews">Reviews</a>
-                            </li>
-                        </ul>
-                        <a id="#book" href="" class="btn bg-white py-2 px-4">Book an Appointment</a>
-                    </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info py-3 px-2 sticky-top" aria-label="navbar">
+            <div class="container-fluid">
+                <img src="../assets/logo.png" style="width: 50px; margin-right:10px;">
+                <a class="navbar-brand fs-3" href="#">Ottawa Dental Clinic</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                    aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ms-auto py-0 pe-4">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about-us">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#services">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#team">Our Team</a>
+                        </li>
+                    </ul>
+                    <a id="#book" href="" class="btn bg-white py-2 px-4">Book an Appointment</a>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>     
         <!-- navbar ends here -->
 
         <!-- hero section starts here -->
@@ -145,7 +140,7 @@
 
         <!-- Services section starts here -->
         <section id="services">
-            <div class="container-fluid col-lg-12 p-5">
+            <div class="container-fluid col-lg-12">
                 <div class="row py-3">
                     <h2 class="text-info text-center">Our Services</h2>
                 </div>
@@ -167,7 +162,7 @@
                                 alt="image showing a woman smiling with a set of different tooth colors">
                             <div class="card-body">
                                 <h5>Teeth Whitening</h5>
-                                <p class="card-text">To bleach and make your natural teeth appear brighter and enhancing your smile.</p>
+                                <p class="card-text">To make your natural teeth appear brighter and enhancing your smile.</p>
                                 <h5>$1500</h5>
                             </div>
                         </div>
@@ -202,7 +197,7 @@
 
         <!-- team section starts here -->
         <section id="team">
-            <div class="container-fluid col-lg-12 p-5">
+            <div class="container-fluid col-lg-12">
                 <div class="row py-4">
                     <h2 class="text-info text-center">Our Team Members</h2>
                 </div>
