--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ottawa Dental Care</title>
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
         <!-- link to google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
             rel="stylesheet">
         <!-- links to css stylesheet -->
-        <link rel="stylesheet" href="../css/main.min.css">
-        <link rel="stylesheet" href="../css/style.css">
-
+        <link rel="stylesheet" href="./css/main.min.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
         <!-- navbar starts here -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-info py-3 px-2 sticky-top" aria-label="navbar">
             <div class="container-fluid">
-                <img src="../assets/logo.png" style="width: 50px; margin-right:10px;">
+                <img src="./assets/logo.png" style="width: 50px; margin-right:10px;">
                 <a class="navbar-brand fs-3" href="#">Ottawa Dental Clinic</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +52,7 @@
             <div class="container-fluid col-lg-10 px-4 py-4">
                 <div class="row flex-lg-row-reverse align-items-center g-5">
                     <div class="col-10 col-lg-6">
-                        <img src="../assets/hero.png" class="d-block mx-lg-auto img-fluid"
+                        <img src="./assets/hero.png" class="d-block mx-lg-auto img-fluid"
                             alt="image of a dentist smiling">
                     </div>
                     <div class="col-lg-6">
@@ -82,17 +81,17 @@
                     <div class="col-lg-6">
                         <div class="row g-3">
                             <div class="col-6 text-start">
-                                <img class="img-fluid w-100" src="../assets/about-1.jpg" alt="decorative image">
+                                <img class="img-fluid w-100" src="./assets/about-1.jpg" alt="decorative image">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid w-75" src="../assets/about-3.jpg" style="margin-top: 25%;"
+                                <img class="img-fluid w-75" src="./assets/about-3.jpg" style="margin-top: 25%;"
                                     alt="decorative image">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid w-75" src="../assets/about-2.jpg" alt="decorative image">
+                                <img class="img-fluid w-75" src="./assets/about-2.jpg" alt="decorative image">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid w-100" src="../assets/about-4.jpg" alt="decorative image">
+                                <img class="img-fluid w-100" src="./assets/about-4.jpg" alt="decorative image">
                             </div>
                         </div>
                     </div>
@@ -147,7 +146,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
                     <div class="col">
                         <div class="card">
-                            <img class="img-fluid" src="../assets/service1.jpg"
+                            <img class="img-fluid" src="./assets/service1.jpg"
                                 alt="image showing a dentist filling the tooth of a patient">
                             <div class="card-body">
                                 <h5>Fillings and Restorations</h5>
@@ -158,7 +157,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img class="img-fluid" src="../assets/service5.webp"
+                            <img class="img-fluid" src="./assets/service5.webp"
                                 alt="image showing a woman smiling with a set of different tooth colors">
                             <div class="card-body">
                                 <h5>Teeth Whitening</h5>
@@ -169,7 +168,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img class="img-fluid" src="../assets/service2.png"
+                            <img class="img-fluid" src="./assets/service2.png"
                                 alt="image showing a tool holding a tooth">
                             <div class="card-body">
                                 <h5>Teeth Extraction</h5>
@@ -181,7 +180,7 @@
 
                     <div class="col">
                         <div class="card">
-                            <img class="img-fluid" src="../assets/service4.jpg"
+                            <img class="img-fluid" src="./assets/service4.jpg"
                                 alt="image showing a dentist cleaning the teeth of a patient">
                             <div class="card-body">
                                 <h5>Routine Cleanings</h5>
@@ -203,7 +202,7 @@
                 </div>
                 <div class="row g-4 px-3 py-4">
                     <div class="col-sm-4 col-xl-3">
-                        <img class="img-fluid rounded-circle" src="../assets/ceo.png"
+                        <img class="img-fluid rounded-circle" src="./assets/ceo.png"
                             alt="image showing Dr James Rodriguez">
                     </div>
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
@@ -241,13 +240,13 @@
                         </div>
                     </div>
                     <div class="col-sm-4 col-xl-3">
-                        <img class="img-fluid rounded-circle" src="../assets/dentist5.jpg"
+                        <img class="img-fluid rounded-circle" src="./assets/dentist5.jpg"
                             alt="image showing Dr Bradley Williams">
                     </div>
                 </div>
                 <div class="row g-4 px-5 py-4">
                     <div class="col-sm-4 col-xl-3">
-                        <img class="img-fluid rounded-circle" src="../assets/dentist2.jpg"
+                        <img class="img-fluid rounded-circle" src="./assets/dentist2.jpg"
                             alt="Image showing Dr Natalie Smith">
                     </div>
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
@@ -285,7 +284,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4 col-xl-3">
-                        <img class="img-fluid rounded-circle" src="../assets/assistant1.jpg"
+                        <img class="img-fluid rounded-circle" src="./assets/assistant1.jpg"
                             alt="image showing nurse Chloe Johnson">
                     </div>
                 </div>
@@ -299,7 +298,7 @@
 
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="../js/main.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
