--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a id="#book" href="" class="btn bg-white py-2 px-4">Book an Appointment</a>
                 </div>
             </div>
-        </nav>     
+        </nav>
         <!-- navbar ends here -->
 
         <!-- hero section starts here -->
@@ -161,7 +161,8 @@
                                 alt="image showing a woman smiling with a set of different tooth colors">
                             <div class="card-body">
                                 <h5>Teeth Whitening</h5>
-                                <p class="card-text">To make your natural teeth appear brighter and enhancing your smile.</p>
+                                <p class="card-text">To make your natural teeth appear brighter and enhancing your
+                                    smile.</p>
                                 <h5>$1500</h5>
                             </div>
                         </div>
@@ -172,7 +173,8 @@
                                 alt="image showing a tool holding a tooth">
                             <div class="card-body">
                                 <h5>Teeth Extraction</h5>
-                                <p class="card-text">To remove a tooth that is badly damaged or causing pain and problems.</p>
+                                <p class="card-text">To remove a tooth that is badly damaged or causing pain and
+                                    problems.</p>
                                 <h5>$1200</h5>
                             </div>
                         </div>
@@ -184,7 +186,8 @@
                                 alt="image showing a dentist cleaning the teeth of a patient">
                             <div class="card-body">
                                 <h5>Routine Cleanings</h5>
-                                <p class="card-text">To maintain the health and cleanliness of your teeth through cleanings.</p>
+                                <p class="card-text">To maintain the health and cleanliness of your teeth through
+                                    cleanings.</p>
                                 <h5>$1000</h5>
                             </div>
                         </div>
@@ -299,6 +302,7 @@
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./js/main.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </html>
