--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 
         <!-- Booking section begins here -->
         <div id="booking">
-            <div class="container-fluid col-lg-12 py-5 px-5">
-                <div class="row g-5 bg-info-subtle pb-3 px-3">
+            <div class="container-fluid bg-info-subtle col-lg-12 pt-5 px-5">
+                <div class="row g-5 px-3">
                     <div class="col-md-6">
                         <h2 class="text-info">Ottawa Dental Clinic</h2>
                         <h5 class="py-3 fs-6">Location: 150 Louis Pasteur Private, Ottawa, ON K1N 1A2, Canada</h5>
@@ -317,7 +317,7 @@
                         <p class="text-center">Email | dental@ottawaClinic.ca</p>
                     </div>
                     <div class="col-md-6">
-                        <h1 class="text-info mb-4 mt-5">Book an Appointment</h1>
+                        <h1 class="text-info mb-4 mt-4">Book an Appointment</h1>
                         <form>
                             <div class="row g-4">
                                 <div class="col-md-6">
@@ -386,12 +386,12 @@
                                 <div class="col-12">
                                     <div class="form-floating">
                                         <textarea class="form-control" placeholder="Special Request" id="message"
-                                            style="height: 150px"></textarea>
+                                            style="height: 175px"></textarea>
                                         <label for="message">Additional Comments</label>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mx-auto">
-                                    <button class="btn btn-info w-100 py-2 text-white fs-4" type="submit">Book
+                                    <button class="btn btn-info w-100 text-white fs-4" type="submit">Book
                                         Now</button>
                                 </div>
                             </div>
