--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="row py-3">
                     <h2 class="text-info text-center">Our Services</h2>
                 </div>
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4 pt-3">
                     <div class="col">
                         <div class="card">
                             <img class="img-fluid" src="./assets/service1.jpg"
@@ -372,28 +372,48 @@
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <label for="date">Select a date:</label>
-                                        <input type="date" class="form-control pb-4" id="date" name="date" required
+                                        <input type="date" class="form-control pb-4" id="date" name="date"
                                             style="padding-top: 55px;">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <label for="time">Select a time:</label>
-                                        <input type="time" class="form-control pb-4" id="date" name="date" required
+                                        <input type="time" class="form-control pb-4" id="time" name="time"
                                             style="padding-top: 55px;">
                                     </div>
                                 </div>
 
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Special Request" id="message"
+                                        <textarea class="form-control" placeholder="Additional Comments" id="message"
                                             style="height: 175px"></textarea>
                                         <label for="message">Additional Comments</label>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mx-auto">
-                                    <button class="btn btn-info w-100 text-white fs-4" type="submit">Book
-                                        Now</button>
+                                    <button class="btn btn-info w-100 text-white fs-4" type="button"
+                                        data-bs-toggle="modal" data-bs-target="#confirmBooking">Book
+                                        Now
+                                    </button>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="confirmBooking" tabindex="-1" role="dialog"
+                                        aria-labelledby="confirmBookingTitle" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="confirmBookingTitle">Booking
+                                                        Confirmation</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body m-4">
+                                                    <h4 class="text-center">Thank you for your booking!</h4>
+                                                    <p class="text-center">We will contact you shortly to confirm your appointment.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </form>
@@ -463,8 +483,9 @@
         </div>
         <!-- footer ends here -->
     </body>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
