--- a/index.html
+++ b/index.html
@@ -133,7 +133,46 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-info btn-lg px-4 me-md-2 mt-2 text-white fs-5" href="">Read More</a>
+                        <button class="btn btn-info btn-lg px-4 me-md-2 mt-2 text-white fs-5" type="button"
+                            data-bs-toggle="modal" data-bs-target="#ReadMore">Read More</button>
+                        <div class="col-md-4 mx-auto">
+                            <!-- Modal -->
+                            <div class="modal fade" id="ReadMore" tabindex="-1" role="dialog"
+                                aria-labelledby="ReadMoreTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="ReadMoreTitle">About Ottawa Dental Clinic</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body px-5 py-4">
+                                            <p class="text-center">Ottawa Dental Clinic has a rich history that dates
+                                                back to its establishment in 2014. Since its inception, the clinic has
+                                                been dedicated to providing comprehensive and holistic dental care to
+                                                patients in Ottawa and the surrounding areas. With a focus on excellence
+                                                and a commitment to patient satisfaction, Ottawa Dental Clinic quickly
+                                                gained a reputation as a trusted dental practice in the community.</p>
+                                            <p class="text-center">Over the years, Ottawa Dental Clinic has grown and
+                                                expanded its services to meet the evolving needs of its patients. The
+                                                clinic has assembled a team of highly skilled dentists, specialists,
+                                                dental hygienists, and support personnel who work together to deliver
+                                                top-quality dental care. With their expertise and dedication, Ottawa
+                                                Dental Clinic has become a go-to destination for individuals seeking
+                                                exceptional dental treatment and personalized care.</p>
+                                            <p class="text-center">Today, Ottawa Dental Clinic stands as a leading
+                                                dental practice in Ottawa, known for its state-of-the-art facilities,
+                                                advanced dental technologies, and a patient-centered approach. The
+                                                clinic takes pride in its commitment to staying at the forefront of
+                                                dental advancements and continuously improving its services. With a
+                                                focus on preventive care, patient education, and a warm and welcoming
+                                                environment, Ottawa Dental Clinic strives to make every patient's dental
+                                                experience comfortable, convenient, and rewarding.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -356,7 +395,7 @@
                                 </p>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <select class="form-select" id="select" aria-label="Select a Service">   
+                                        <select class="form-select" id="select" aria-label="Select a Service">
                                             <option value="1">Fillings and Restoration</option>
                                             <option value="2">Teeth Whitening</option>
                                             <option value="3">Teeth Extraction</option>
